# iStar-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ablation.py  api.py  artifact_evaluation.py  bert_util.py  data_process.py  dependency.py  entry.py  infer_entity.py  infer_task.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_softmax_ner.py  run_softmax_task.sh
data_process/: case_study.py  conll_split_json.py  doc_split_sent.py  json_to_conll_k_fold.py  jsonl_to_conll.py  k_fold_calculate.py
evaluate/: actor.py  intention.py  visualize.py
evaluate/visualize/Actor/: 0_pred.html  0_true.html  100_pred.html  100_true.html  104_pred.html  104_true.html  114_pred.html  114_true.html  115_pred.html  115_true.html  11_pred.html  11_true.html  137_pred.html  137_true.html  138_pred.html  138_true.html  139_pred.html  139_true.html  13_pred.html  13_true.html  145_pred.html  145_true.html  151_pred.html  151_true.html  152_pred.html  152_true.html  157_pred.html  157_true.html  158_pred.html  158_true.html  167_pred.html  167_true.html  168_pred.html  168_true.html  173_pred.html  173_true.html  175_pred.html  175_true.html  181_pred.html  181_true.html  (+44 more)
evaluate/visualize/IntentionCore/: 105_pred.html  105_true.html  127_pred.html  127_true.html  145_pred.html  145_true.html  147_pred.html  147_true.html  148_pred.html  148_true.html  154_pred.html  154_true.html  164_pred.html  164_true.html  16_pred.html  16_true.html  174_pred.html  174_true.html  184_pred.html  184_true.html  186_pred.html  186_true.html  187_pred.html  187_true.html  190_pred.html  190_true.html  194_pred.html  194_true.html  200_pred.html  200_true.html  209_pred.html  209_true.html  20_pred.html  20_true.html  211_pred.html  211_true.html  213_pred.html  213_true.html  222_pred.html  222_true.html  (+24 more)
exp/: main.py  run.py
models/: bert_ner.py  model_ner.py  roberta_ner.py
pretrained_data/2021/agent_role/: all.jsonl  dataset.conll
pretrained_data/2021/entity_ar_r_combined/: all.jsonl  all_unmerged.jsonl  dataset.conll  dataset_pure_punct_notrail.conll  labels.txt  train.txt
pretrained_data/2021/resource/: dataset.conll  dataset_pure_punct.conll  train.txt
pretrained_data/2021/task_core_aux_cond/: benchmark.txt  dataset_pure_punct_notrail.conll  dev.txt  labels.txt  process.ipynb
pretrained_data/2021/task_quality/: all.jsonl  dataset.conll
pretrained_data/2022/relation/: admin.jsonl  df_test.pkl  df_train.pkl
pretrained_data/2022/resource/: benchmark.txt  dev.txt  split_dev.jsonl  train.txt
pretrained_data/2022_Kfold/relation/: BERT_tokenizer.pkl  benchmark.txt  relations.pkl
pretrained_data/2022_documents/classify/: all.jsonl
pretrained_data/2022_documents/raw/: 2001 - libra.docx  2004 - philips.docx  2008 - virtual ed.docx
pretrained_data/2022_reasoning_deprecated/actor/: raw.jsonl
pretrained_data/2022_reasoning_deprecated/classify/: all.jsonl
pretrained_data/2022_reasoning_deprecated/raw/: 2004 - ijis.docx  2007 - e-store.docx  README  raw_data.txt
pretrained_data/agent_role/ar_1/: dataset_pure_punct.conll  dev.txt
pretrained_data/entity_ar_r_combined/: cached_dev_bert-base-cased_128  cached_train_bert-base-cased_128  combined.ipynb  dataset_pure_punct.conll  dev.txt  split_dev.jsonl  train.txt
pretrained_data/resource/: all.jsonl  dev.txt  labels.txt
pretrained_data/task_core_aux_cond/: all.jsonl  dataset.conll  dataset_pure_punct.conll  train.txt
pretrained_data/task_core_aux_cond/k-fold/: 0.conll  1.conll  4.conll
pretrained_data/task_quality/tq_1/: all.jsonl  cached_dev_bert-base-cased_128  cached_train_bert-base-cased_128  combined.ipynb  dataset.conll  dataset_pure_punct.conll  dev.txt  labels.txt  train.txt
pretrained_data/task_quality/tq_2/: dev.txt  train.txt
src/: __init__.py  typing.py
src/deeplearning/: __init__.py  config.py
src/deeplearning/entity/: __init__.py  config.py
src/infer/: infer_entity.py  infer_task.py
src/models/: electra_ner.py  model_ner.py
src/pipeline/: __init__.py  dispatch.py  main.py
src/reader/: __init__.py  main.py
src/rules/: config.py  dispatch.py
src/utils/: coref.py  log_color.py  spacy.py  spacy_utils.py  typing.py  utils_ner.py
temp/: custom_valuation.ipynb  dependency.py  fix_evaluate.py  intention_dev.jsonl  main.py  metric.py  run_softmax_entity.sh  run_softmax_ner.py  task_cac_test.ipynb  task_cac_train.ipynb  temp_dep_type.ipynb
test/: __init__.py
test/deepleaning/: pickle_saver.py  test_measure_bert_entity_prec.py  test_measure_bert_intention_prec.py  test_measure_bert_prec.py  test_utils.py
utils/: utils_metrics.py  utils_ner.py
(+496 files in other folders)
