[tool.poetry]
name = "iStarAutoModeling"
version = "0.1.0"
description = "A pipeline to extract requirements from documents and generate iStar models."
authors = ["FrozenYogurtPuff <frozenyogurtpuff@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
tqdm = "^4.62.3"
transformers = "^4.16.2"
tensorboardX = "^2.4.1"
seqeval = "^1.2.2"
spacy = "^3.2.2"
torch = "^1.10.2"
spacy-alignments = "^0.8.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
